--- a/docs/像自然语言一样阅读编程语言.md
+++ b/docs/像自然语言一样阅读编程语言.md
@@ -162,14 +162,14 @@ struct User {
 }
 ```
 
-设 结构 User 的 active 字段类型为 布尔，username类型为String。。。
+设 结构 User，其中 active 字段类型为 布尔，username类型为String。。。
 
 ```rust
 let user1 = User {
     email: String::from("someone@example.com"),
 ```
 
-令 user1 绑定 User结构体，其中，email字段值为String::from("someone@example.com"),。。
+令 user1 绑定 User 结构体，其中，email字段值为String::from("someone@example.com"),。。
 
 ```rust
 let user2 = User {
