--- a/Self-GrowthKSM/孵化器/01基本.md
+++ b/Self-GrowthKSM/孵化器/01基本.md
@@ -28,6 +28,51 @@ keys:标签。相似（线索：近义词、同义词、反义词等等）
 - 通过四种抽象，可以演化出丰富性与多样性。
 
 
+## 多态
+
+```java
+def:public ?this as [[参考元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+keys:标签。
+```
+
+> 标题：冰（元素?多态）
+
+
+每一个物质在不同的环境下，都会有不同的形态结构功能。多态是元素的变形式。比如水在不同温度下的不同状态，在寒冷的温度下是冰，常温下为水，高温下蒸发为水蒸气。
+
+
+多型或多态性可以是下列意思：
+
+- 多型 (生物学)（polymorphism）：一个物种的同一种群中存在两种或多种明显不同的表型
+- 多态 (计算机科学)（polymorphism）：多态是同一个行为具有多个不同表现形式或形态的能力。多态就是同一个接口，使用不同的实例而执行不同操作。
+- 多型 (结晶学)（polytypism）：一种元素或化合物以两种或两种以上层状结构存在的现象。
+
+化学分子式中：
+- 同素异形体：是相同元素组成,不同形态的单质.如碳元素就有金钢石、石墨、无定形碳等同素异形体.同素异形体由于结构不同,彼此间物理性质有差异
+- 同分异构体：在有机化学中，将分子式相同、结构不同的化合物互称同分异构体，也称为结构异构体。将具有相同分子式而具有不同结构的现象称为同分异构现象。
+
+
+> 函数文本
+> 最小可复用文本句段是函数文本，类似tw条目。
+
+注意的是`?this as`的书写仅有两种方式，`?this`定义参考元素、`?this as`定于相对于参考元素的同族元素。
+
+## 组合
+
+```java
+def:public this complex [任意元素1，任意元素2] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+keys:标签。
+```
+
+> 标题：碳水化合物（元素&组合）
+
+Composition > Inheritance
+
+正如继承关系，组合关系有了complex关键字就不需要在this前加&修饰符了
+
+code Aesthetic
+
+
 ## 语义空间
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
