--- a/Self-GrowthKSM/孵化器/01基本.md
+++ b/Self-GrowthKSM/孵化器/01基本.md
@@ -124,36 +124,46 @@ code Aesthetic
 对于程序设计来说：菱形继承，它会造成数据冗余和二义性的问题。水果，香蕉，橘子，水果沙拉。
 
 
+### 元素视图
+
+1. 类似CAD，3d软件的窗口视图与查看方式。
+2. 各种类型的结构，树状、网状等等。
+
+
+### 元素的合并
+
+### 元素的命名
+
 ### 推导式
 
-公式：B ⊂ A = this->{B} super A
-解释，元素B包含于元素A 等价于 元素B的父类是元素A。
+- 公式：B ⊂ A = this->{B} super A
+- 解释，元素B包含于元素A 等价于 元素B的父类是元素A。
 
-公式：存在 this->{B，C} super A = ?this->{B} as B super A OR ?this->{C} as B super A
-解释，B和C的父类是A，等价于 B 和 C 是同一族，同一广度。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
+- 公式：存在 this->{B，C} super A = ?this->{B} as B super A OR ?this->{C} as B super A
+- 解释，B和C的父类是A，等价于 B 和 C 是同一族，同一广度。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
 
-公式：this->{C} super A、B  ≠  this->{D} complex A、B
-解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即super ⊂ complex。
+- 公式：this->{C} super A、B  ≠  this->{D} complex A、B
+- 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即super ⊂ complex。
 
-公式：public this super =this 表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
+- 公式：public this super =this 表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
 
-公式：public @this complex [...]  ≠ public @this super [...]
-解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
+- 公式：public @this complex [...]  ≠ public @this super [...]
+- 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
-公式：public ?this as [....] complex [...] 表示元素组合后产生的多态。
+- 公式：public ?this as [....] complex [...] 表示元素组合后产生的多态。
 
-公式：public @this super [...]
+- 公式：public @this super [...]
 
-公式：public this abstract [...]
+- 公式：public this abstract [...]
 
-公式：public ?this as [....] super [...]
+- 公式：public ?this as [....] super [...]
 
 
-公式：public ?this complex [...]
+- 公式：public ?this complex [...]
 解释：元素组合后产生的元素被标记为[[参考元素]]，以供标识同族元素
 
-公式：public this complex [...] super [[A]]
-解释：元素组合后产生的元素继承自元素A。
+- 公式：public this complex [...] super [[A]]
+- 解释：元素组合后产生的元素继承自元素A。
 
 
 ## 定义权限
