--- a/Self-GrowthKSM/孵化器/01基本.md
+++ b/Self-GrowthKSM/孵化器/01基本.md
@@ -17,10 +17,12 @@ keys:标签。相似（线索：近义词、同义词、反义词等等）
 > 我希望它是一个不依赖任何软件，自成长且不断完善的笔记系统。我希望使用数学集合的思维与运算方法。
 >
 > 语义框架
+>
+> 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
 
 
 
-# 标题：水（元素 - 基本）
+# 标题：水（元素 - 基本、继承体现层次）
 
 - 通过语义空间，我大概可以实现网状结构和树状结构。
 - 通过语义空间，我可以使用搜索功能检索到任何类别的元素，包括访问权限、深度Depth=1的检索等等。
@@ -28,12 +30,21 @@ keys:标签。相似（线索：近义词、同义词、反义词等等）
 - 通过四种抽象，可以演化出丰富性与多样性。
 
 
-## 多态
+## 多态（层次≠多态）
 
 ```java
-def:public ?this as [[参考元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def:public ?this  [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
 keys:标签。
 ```
+
+需要考虑到仅特征元素是多态，衍生元素应具有基本元素的形式多态。
+而且可以筛选到所有特征元素。以及参考与特征元素的元素？感觉仅筛选出特征元素就可以了。
+
+标注当前元素为特征元素并列出其它参考元素：
+`def:public ?this or [...]`
+
+标注当前元素参考与特征元素，设为基本元素。
+`def:public this as [特征元素]`
 
 > 标题：冰（元素?多态）
 
@@ -55,9 +66,13 @@ keys:标签。
 > 函数文本
 > 最小可复用文本句段是函数文本，类似tw条目。
 
-注意的是`?this as`的书写仅有两种方式，`?this`定义参考元素、`?this as`定于相对于参考元素的同族元素。
+层次≠多态，判别式：
 
-## 组合
+层级 不等于 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
+
+**多态不太好用。**，多态是从一件事物的多种状态中选一个作为原点参考系。虽然可以表示层级而且层级可以跳转，但扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
+
+## 组合（具象）
 
 ```java
 def:public this complex [任意元素1，任意元素2] has [B, C, D] cite [[元素]] throw [父元素/子元素]
@@ -85,28 +100,30 @@ code Aesthetic
 ## 符号定义
 
 > `@` 和 `?` 修饰符需要标注在this关键字前，其它字符可以不标。
+> 关系成对存在。Tomzheng的二元基因。
 
 1. 权限：`<public><mutable><private>`，公开、可选、私有。
 2. `留空`：基本。元素其本身就是它；
 3. `&`：组合。与，连接组合元素；
 4. `@`：实例。`at` 指向实例对象；
-5. `?`：多态。问号，同族元素。
+5. `?`：多态。问号，相同层次元素、同族元素。
 6. `this`代指当前文件(元素)
-7. `as`代指多态的第一参考元素
-8. `super`代指父类，对于多继承，父类排序依次从 最相关 到 最不相关 。
-9. `complex`代指组合、复杂度，组合多个元素形成新的元素。
-10. `has`代指当前类含有子类列表
-11. `throw` 代指父元素限定范围，子元素实际处理。
-12. `def` 代指定义语义空间。
-13. `keys` 代指定义关键词。
-14. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
-15. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
+7. `as`代指多态的特征元素
+8. `or`代指特征元素的参考特征元素列表。
+9. `super`代指父类，对于多继承，父类排序依次从 最相关 到 最不相关 。
+10. `complex`代指组合、复杂度，组合多个元素形成新的元素。
+11. `has`代指当前类含有子类列表
+12. `throw` 代指父元素限定范围，子元素实际处理。
+13. `def` 代指定义语义空间。
+14. `keys` 代指定义关键词。
+15. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
+16. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
 
 ## 模型
 
 为了方便理解，大致可以用空间思维概括：其中多态第一维，继承第二维，复杂度第三维，实例第四维。
 
-- 广度：多态， `?this as [[参考元素]]`
+- 广度：多态， `?this as [[特征元素]]`
 - 深度：继承，  `this super [...] has [...]`
 - 复杂度：组合，`this complex [...]`
 - 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
@@ -145,7 +162,8 @@ code Aesthetic
 - 公式：this->{C} super A、B  ≠  this->{D} complex A、B
 - 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即super ⊂ complex。
 
-- 公式：public this super =this 表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
+- 公式：public this super =this （解决什么都重要的问题）
+- 解释：表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
 
 - 公式：public @this complex [...]  ≠ public @this super [...]
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
@@ -160,7 +178,7 @@ code Aesthetic
 
 
 - 公式：public ?this complex [...]
-解释：元素组合后产生的元素被标记为[[参考元素]]，以供标识同族元素
+- 解释：元素组合后产生的元素被标记为[[特征元素]]。
 
 - 公式：public this complex [...] super [[A]]
 - 解释：元素组合后产生的元素继承自元素A。
