--- a/Self-GrowthKSM/孵化器/01基本.md
+++ b/Self-GrowthKSM/孵化器/01基本.md
@@ -37,6 +37,20 @@ def:public ?this  [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] ci
 keys:标签。
 ```
 
+**重新定义多态，多态到底是什么？**
+
+言外之意？阳的对立统一的阴？元素的元素？元素的类元信息？
+
+多态可以实现重定向。
+
+层次≠多态，判别式：
+
+层级 不等于 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
+
+**多态不太好用。**，多态是从一件事物的多种状态中选一个作为原点参考系。虽然可以表示层级而且层级可以跳转，但扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
+
+----
+
 需要考虑到仅特征元素是多态，衍生元素应具有基本元素的形式多态。
 而且可以筛选到所有特征元素。以及参考与特征元素的元素？感觉仅筛选出特征元素就可以了。
 
@@ -65,12 +79,6 @@ keys:标签。
 
 > 函数文本
 > 最小可复用文本句段是函数文本，类似tw条目。
-
-层次≠多态，判别式：
-
-层级 不等于 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
-
-**多态不太好用。**，多态是从一件事物的多种状态中选一个作为原点参考系。虽然可以表示层级而且层级可以跳转，但扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
 
 ## 组合（具象）
 
@@ -121,16 +129,19 @@ code Aesthetic
 
 ## 模型
 
-为了方便理解，大致可以用空间思维概括：其中多态第一维，继承第二维，复杂度第三维，实例第四维。
+为了方便理解，大致可以用空间思维概括：~~其中多态第一维，继承第二维，复杂度第三维，实例第四维。~~
 
-- 广度：多态， `?this as [[特征元素]]`
-- 深度：继承，  `this super [...] has [...]`
-- 复杂度：组合，`this complex [...]`
+- 深度和广度：继承，  `this super [...] has [...]`
+- ？？？    ：多态， `?this as [[特征元素]]`
+
+- 组合、抽象，`this complex [...]`
 - 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
 
 通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
 
 元素的范围，也就是作文围绕论述主题的范围是随自己心去限定的，不过总是有中心，有主干，有枝叶的，就像语言一样。也可以借鉴史记，史记每一篇侧重于某个人物的描画，其它事情略写，但整本史记中所以人物事件斗殴描写的精致，对于整本书来说，每个场景都是完整的
+
+
 
 
 
@@ -194,7 +205,7 @@ code Aesthetic
 
 最为私有者与最为公开者都可得全，唯有两者之间有所保留。此合乎人际关系曲线。
 
-
+## 等价、换算、叠加、减去。
 
 ## 知识地图
 
