--- a/Self-GrowthKSM/孵化器/01基本.md
+++ b/Self-GrowthKSM/孵化器/01基本.md
@@ -1,3 +1,5 @@
+# 元素和关系。
+
 ---
 aliases: [AI, Artificial Intelligence]
 ---
@@ -199,11 +201,9 @@ code Aesthetic
 
 > 清晰的使用关键字定义权限使查找和重用更有效率。不会存在歧义。
 
-- `<public>`：任何人都可阅读查看。
-- `<mutable>`：可变的，可选择的。仅某一个群体或某个人比如社团小组、当前面对的【不同的人】、家庭。
-- `<private>`：仅属于自己，只能自己保护好，这也是在保护他人，因为有些事情和信息只能自己讲给自己，比如自己身上的组织不能给别人。会发生免疫反应的。有些东西是不适合拿去分享的。比如你的观点。这些例子举不胜数。
+- `<pub>`：public，任何人都可阅读查看。
+- `<mut>`：mutable，可变的，可选择的。一个群体或某个人比如社团小组、当前面对的【不同的人】、家庭。包含相对私有，对于人类，没有绝对不可说的秘密，只是相对不可说。`<private>`：priv仅属于自己，只能自己保护好，这也是在保护他人，因为有些事情和信息只能自己讲给自己，比如自己身上的组织不能给别人。会发生免疫反应的。有些东西是不适合拿去分享的。比如你的观点。这些例子举不胜数。人际关系曲线。
 
-最为私有者与最为公开者都可得全，唯有两者之间有所保留。此合乎人际关系曲线。
 
 ## 等价、换算、叠加、减去。
 
@@ -227,6 +227,6 @@ code Aesthetic
 ## 关于对图片的管理
 
 1. 文内使用图片仅作为图像解释，即图文并茂，降低理解难度。
-2. 所文档在编写期间，好吧一直是编写期间，只能使用wiki链接，防止混乱。当然你可以发布，发布时可以转换为md链接。
+2. 所文档在编写期间，好吧一直是编写期间，只能使用wiki的图片链接，且仅使用最短链接，不可以加入相对路径，防止混乱以及防止增加复杂度。当然你可以发布，发布时可以转换为md链接。
 3. 对于个别必要的图片，可以转换为md链接，比如自述文件。
 4. 小心的使用插件清理掉不用的图片。设置插件清理掉的图片放进ob的回收站。
