--- a/Self-GrowthKSM/孵化器/元素的渐构.md
+++ b/Self-GrowthKSM/孵化器/元素的渐构.md
@@ -42,6 +42,13 @@
 以第一人称视角，我，遇到的问题（世界上只有一个人类）
 
 
+## 事实与观点的不必区分
+
+“事实”与“观点”的区分真的成立吗？ - Andy Lee的文章 - 知乎
+https://zhuanlan.zhihu.com/p/637921666
+
+我依旧认为，我们不能指着任何一句话，问它是事实还是观点。我们应该区分事实与非事实，观点与非观点。我们也可以区分描述性陈述和规范性陈述。我们还可以区分信念与知识。我们可以针对陈述做出各种各样的区分，但事实与观点的区分不在其列。因为这个知识点只会带来混淆，不会帮助学生学会批判性思维。”
+
 ## 为知识F(x)命名
 在思考这些问题的过程中，你的大脑连接被这些例子所改变了，最终关联到一个关键词上，便完成了一次学习过程。
 
