--- a/Self-GrowthKSM/孵化器/010元素.md
+++ b/Self-GrowthKSM/孵化器/010元素.md
@@ -11,6 +11,7 @@
 > 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
 
 
+
 ## 语义空间
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
@@ -18,6 +19,7 @@
 `def:<权限> <修饰符>this as [...] <super/complex> [...] has [...] throw [Super, ?sub]`
 
 由广度、深度、复杂度与实现等四个变量构成的类四维空间
+
 
 
 ## 符号定义
@@ -42,7 +44,9 @@
 15. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
 16. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
 
-## 模型
+
+
+## 模型与结构
 
 为了方便理解，大致可以用空间思维概括：~~其中多态第一维，继承第二维，复杂度第三维，实例第四维。~~
 
@@ -58,8 +62,6 @@
 
 
 
-
-
 ### 多继承
 
 多继承（Multiple inheritance），即一个子类可以有多个父类，它继承了多个父类的特性。多继承可以看作是单继承的扩展。所谓多继承是指派生类具有多个基类，派生类与每个基类之间的关系仍可看作是一个单继承。（也就说番茄既属于水果也属于蔬菜）
@@ -67,55 +69,41 @@
 对于程序设计来说：菱形继承，它会造成数据冗余和二义性的问题。水果，香蕉，橘子，水果沙拉。
 
 
-### 元素视图
+### 元素视图 (视图)
 
 1. 类似CAD，3d软件的窗口视图与查看方式。
 2. 各种类型的结构，树状、网状等等。
 
+整体性、利用不同的视角观察元素，修正更新他们。这种视角可以是从宏观到微观，即从整体元素全集的关系到每个元素周围的关系到元素内部描述。元素的排列分类等等。
+
+
+### 知识的验证与修改
+
 
 ### 元素的合并
 
-### 元素的命名
 
-### 推导式
+### 元素的命名(为知识F(x)命名)
 
-- 公式：B ⊂ A = this->{B} super A
-- 解释，元素B包含于元素A 等价于 元素B的父类是元素A。
+在思考这些问题的过程中，你的大脑连接被这些例子所改变了，最终关联到一个关键词上，便完成了一次学习过程。
 
-- 公式：存在 this->{B，C} super A = ?this->{B} as B super A OR ?this->{C} as B super A
-- 解释，B和C的父类是A，等价于 B 和 C 是同一族，同一广度。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
+关键词命名：（压缩信息，大脑连接）
+随后你会用一个更好的关键词来代表你找出的关系，一种是动宾结构，因为它描述了输入和函数，输出也随之确定了。
 
-- 公式：this->{C} super A、B  ≠  this->{D} complex A、B
-- 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即super ⊂ complex。
+一个知识可以有很多名字，但名字并不重要，重要的是从输入到输出的这种关系。不幸的是很多人只是记住了最不重要的名字。
+还有一种知识本身就是名词，也会让你觉得它并没输出，但这种知识的输出是分类任务中的类型，描述它的句子是系表结构，系动词被导图的连线所代替了。
+当学习“什么（主）是（系）外部性（表）”或“外部性（主）是（系）什么（表）”，输出就是“是外部性”或“非外部性”中的一个，关键词就可以命名为“外部性”（主或表）
 
-- 公式：public this super =this （解决什么都重要的问题）
-- 解释：表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
+——来自《学习观》
 
-- 公式：public @this complex [...]  ≠ public @this super [...]
-- 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
-
-- 公式：public ?this as [....] complex [...] 表示元素组合后产生的多态。
-
-- 公式：public @this super [...]
-
-- 公式：public this abstract [...]
-
-- 公式：public ?this as [....] super [...]
-
-
-- 公式：public ?this complex [...]
-- 解释：元素组合后产生的元素被标记为[[特征元素]]。
-
-- 公式：public this complex [...] super [[A]]
-- 解释：元素组合后产生的元素继承自元素A。
-
+tips：为数据与算法命名，tiddlywiki笔记
 
 ## 定义权限
 
 > 清晰的使用关键字定义权限使查找和重用更有效率。不会存在歧义。
 
 - `<pub>`：public，任何人都可阅读查看。
-- `<mut>`：mutable，可变的，可选择的。一个群体或某个人比如社团小组、当前面对的【不同的人】、家庭。包含相对私有，对于人类，没有绝对不可说的秘密，只是相对不可说。`<private>`：priv仅属于自己，只能自己保护好，这也是在保护他人，因为有些事情和信息只能自己讲给自己，比如自己身上的组织不能给别人。会发生免疫反应的。有些东西是不适合拿去分享的。比如你的观点。这些例子举不胜数。人际关系曲线。
+- `<mut>`：mutable，可变的，可选择的。一个群体或某个人比如社团小组、当前面对的【不同的人】、家庭。包含相对私有，对于人类，没有绝对不可说的秘密，只是相对不可说。mut包括：priv仅属于自己，只能自己保护好，这也是在保护他人，因为有些事情和信息只能自己讲给自己，比如自己身上的组织不能给别人。会发生免疫反应的。有些东西是不适合拿去分享的。比如你的观点。这些例子举不胜数。人际关系曲线。
 
 
 ## 等价、换算、叠加、减去。
