--- a/Self-GrowthKSM/孵化器/010元素.md
+++ b/Self-GrowthKSM/孵化器/010元素.md
@@ -11,6 +11,19 @@
 > 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
 
 
+元素的范围，也就是作文围绕论述主题的范围是随自己心去限定的，不过总是有中心，有主干，有枝叶的，就像语言一样。也可以借鉴史记，史记每一篇侧重于某个人物的描画，其它事情略写，但整本史记中所以人物事件斗殴描写的精致，对于整本书来说，每个场景都是完整的
+
+通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
+
+
+为了方便理解，大致可以用空间思维概括：~~其中多态第一维，继承第二维，复杂度第三维，实例第四维。~~
+
+- 深度和广度：继承，  `this super [...] has [...]`
+- ？？？    ：多态， `?this as [[特征元素]]`
+
+- 组合、抽象，`this complex [...]`
+- 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
+
 
 ## 语义空间
 
@@ -46,30 +59,17 @@
 
 
 
-## 模型与结构
-
-为了方便理解，大致可以用空间思维概括：~~其中多态第一维，继承第二维，复杂度第三维，实例第四维。~~
-
-- 深度和广度：继承，  `this super [...] has [...]`
-- ？？？    ：多态， `?this as [[特征元素]]`
-
-- 组合、抽象，`this complex [...]`
-- 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
-
-通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
-
-元素的范围，也就是作文围绕论述主题的范围是随自己心去限定的，不过总是有中心，有主干，有枝叶的，就像语言一样。也可以借鉴史记，史记每一篇侧重于某个人物的描画，其它事情略写，但整本史记中所以人物事件斗殴描写的精致，对于整本书来说，每个场景都是完整的
 
 
 
-### 多继承
+## 多继承
 
 多继承（Multiple inheritance），即一个子类可以有多个父类，它继承了多个父类的特性。多继承可以看作是单继承的扩展。所谓多继承是指派生类具有多个基类，派生类与每个基类之间的关系仍可看作是一个单继承。（也就说番茄既属于水果也属于蔬菜）
 
 对于程序设计来说：菱形继承，它会造成数据冗余和二义性的问题。水果，香蕉，橘子，水果沙拉。
 
 
-### 元素视图 (视图)
+## 元素视图 (视图)
 
 1. 类似CAD，3d软件的窗口视图与查看方式。
 2. 各种类型的结构，树状、网状等等。
@@ -77,13 +77,13 @@
 整体性、利用不同的视角观察元素，修正更新他们。这种视角可以是从宏观到微观，即从整体元素全集的关系到每个元素周围的关系到元素内部描述。元素的排列分类等等。
 
 
-### 知识的验证与修改
+## 知识的验证与修改
 
 
-### 元素的合并
+## 元素的合并
 
 
-### 元素的命名(为知识F(x)命名)
+## 元素的命名(为知识F(x)命名)
 
 在思考这些问题的过程中，你的大脑连接被这些例子所改变了，最终关联到一个关键词上，便完成了一次学习过程。
 
