--- a/Self-GrowthKSM/孵化器/023关系-组合.md
+++ b/Self-GrowthKSM/孵化器/023关系-组合.md
@@ -1,7 +1,7 @@
 ## 组合（具象）
 
 ```java
-def:public this complex [任意元素1，任意元素2] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def:pub this complex [任意元素1，任意元素2] has [B, C, D] cite [[元素]] throw [父元素/子元素]
 keys:标签。
 ```
 
@@ -12,3 +12,6 @@ Composition > Inheritance
 正如继承关系，组合关系有了complex关键字就不需要在this前加&修饰符了
 
 code Aesthetic
+
+
+具象 组合 combine。
