--- a/Self-GrowthKSM/孵化器/024关系-多态.md
+++ b/Self-GrowthKSM/孵化器/024关系-多态.md
@@ -1,7 +1,7 @@
 ## 多态（层次≠多态）
 
 ```java
-def:public ?this  [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def:pub ?this  [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
 keys:标签。
 ```
 
@@ -15,6 +15,10 @@ keys:标签。
 
 层级 不等于 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
 
+
+多态、换算、言外之意、注释、多态可以实现重定向、元素的元素？、元素的类似元信息？
+
+
 **多态不太好用。**，多态是从一件事物的多种状态中选一个作为原点参考系。虽然可以表示层级而且层级可以跳转，但扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
 
 ----
@@ -23,10 +27,10 @@ keys:标签。
 而且可以筛选到所有特征元素。以及参考与特征元素的元素？感觉仅筛选出特征元素就可以了。
 
 标注当前元素为特征元素并列出其它参考元素：
-`def:public ?this or [...]`
+`def:pub ?this or [...]`
 
 标注当前元素参考与特征元素，设为基本元素。
-`def:public this as [特征元素]`
+`def:pub this as [特征元素]`
 
 > 标题：冰（元素?多态）
 
