--- a/Self-GrowthKSM/孵化器/026关系-实例.md
+++ b/Self-GrowthKSM/孵化器/026关系-实例.md
@@ -2,7 +2,7 @@
 ## 实例
 
 ```java
-def:public @this super [[基本]]，[[Other]] has [B, C, D] throw [父元素/子元素]
+def:pub @this super [[基本]]，[[Other]] has [B, C, D] throw [父元素/子元素]
 keys:标签。
 ```
 
