--- a/Self-GrowthKSM/孵化器/030表达式.md
+++ b/Self-GrowthKSM/孵化器/030表达式.md
@@ -9,23 +9,23 @@
 - 公式：this->{C} super A、B  ≠  this->{D} complex A、B
 - 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即super ⊂ complex。
 
-- 公式：public this super =this （解决什么都重要的问题）
+- 公式：pub this super =this （解决什么都重要的问题）
 - 解释：表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
 
-- 公式：public @this complex [...]  ≠ public @this super [...]
+- 公式：pub @this complex [...]  ≠ pub @this super [...]
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
-- 公式：public ?this as [....] complex [...] 表示元素组合后产生的多态。
+- 公式：pub ?this as [....] complex [...] 表示元素组合后产生的多态。
 
-- 公式：public @this super [...]
+- 公式：pub @this super [...]
 
-- 公式：public this abstract [...]
+- 公式：pub this abstract [...]
 
-- 公式：public ?this as [....] super [...]
+- 公式：pub ?this as [....] super [...]
 
 
-- 公式：public ?this complex [...]
+- 公式：pub ?this complex [...]
 - 解释：元素组合后产生的元素被标记为[[特征元素]]。
 
-- 公式：public this complex [...] super [[A]]
+- 公式：pub this complex [...] super [[A]]
 - 解释：元素组合后产生的元素继承自元素A。
