--- a/Self-GrowthKSM/孵化器/010元素.md
+++ b/Self-GrowthKSM/孵化器/010元素.md
@@ -10,6 +10,10 @@
 >
 > 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
 
+- 通过语义空间，我大概可以实现网状结构和树状结构。
+- 通过语义空间，我可以使用搜索功能检索到任何类别的元素，包括访问权限、深度Depth=1的检索等等。
+- 通过keys，我可以大概摘要出文件内容与启发性词汇
+- 通过元素与关系，可以演化出丰富性与多样性。
 
 元素的范围，也就是作文围绕论述主题的范围是随自己心去限定的，不过总是有中心，有主干，有枝叶的，就像语言一样。也可以借鉴史记，史记每一篇侧重于某个人物的描画，其它事情略写，但整本史记中所以人物事件斗殴描写的精致，对于整本书来说，每个场景都是完整的
 
@@ -19,10 +23,10 @@
 为了方便理解，大致可以用空间思维概括：~~其中多态第一维，继承第二维，复杂度第三维，实例第四维。~~
 
 - 深度和广度：继承，  `this super [...] has [...]`
-- ？？？    ：多态， `?this as [[特征元素]]`
-
 - 组合、抽象，`this complex [...]`
 - 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
+
+多态， `?this as [[特征元素]]` 究竟代表什么意思？
 
 
 ## 语义空间
@@ -37,28 +41,32 @@
 
 ## 符号定义
 
-> `@` 和 `?` 修饰符需要标注在this关键字前，其它字符可以不标。
+> `@` 和 `?` 修饰符需要标注在this关键字前
 > 关系成对存在。Tomzheng的二元基因。
 
-1. 权限：`<public><mutable><private>`，公开、可选、私有。
-2. `留空`：基本。元素其本身就是它；
-3. `&`：组合。与，连接组合元素；
-4. `@`：实例。`at` 指向实例对象；
-5. `?`：多态。问号，相同层次元素、同族元素。
-6. `this`代指当前文件(元素)
-7. `as`代指多态的特征元素
-8. `or`代指特征元素的参考特征元素列表。
-9. `super`代指父类，对于多继承，父类排序依次从 最相关 到 最不相关 。
-10. `complex`代指组合、复杂度，组合多个元素形成新的元素。
-11. `has`代指当前类含有子类列表
-12. `throw` 代指父元素限定范围，子元素实际处理。
-13. `def` 代指定义语义空间。
-14. `keys` 代指定义关键词。
-15. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
-16. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
+### 修饰符
+
+1. `?`：多态。`or`,问号，相同层次元素、同族元素。
+2. `@`：实例。`at`,指向实例对象；
+
+### 定义关键字
+
+1. `keys` 代指定义关键词。
+2. `def` 代指定义语义空间。
+3. `<pub><mut>`，权限：公开、可选。
+4. `this` 代指当前文件(元素)
+5. `throw` 代指父元素限定范围，子元素实际处理。
 
 
+### 关系关键字
 
+1. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
+2. `or` 代指特征元素的参考特征元素列表。
+3. `as` 代指多态的特征元素
+4. `super` 代指父类，对于多继承，父类排序依次从 最相关 到 最不相关 。
+5. `has` 代指当前类含有子类列表
+6. `complex` 代指组合、复杂度，组合多个元素形成新的元素。
+7. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
 
 
 
