--- a/Self-GrowthKSM/孵化器/030表达式.md
+++ b/Self-GrowthKSM/孵化器/030表达式.md
@@ -1,4 +1,12 @@
-# 推导式
+# 表达式
+
+## 检索式
+
+- 描述：查找同层元素。
+- 公式：this super [[...]]
+
+
+## 推导式
 
 - 公式：B ⊂ A = this->{B} super A
 - 解释，元素B包含于元素A 等价于 元素B的父类是元素A。
