--- a/Self-GrowthKSM/孵化器/024关系-多态.md
+++ b/Self-GrowthKSM/孵化器/024关系-多态.md
@@ -1,7 +1,7 @@
 ## 多态（层次≠多态）
 
 ```java
-def:pub ?this  [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def:pub ?this or [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
 keys:标签。
 ```
 
@@ -17,6 +17,9 @@ keys:标签。
 
 
 多态、换算、言外之意、注释、多态可以实现重定向、元素的元素？、元素的类似元信息？
+
+
+○ 形象|元素
 
 
 **多态不太好用。**，多态是从一件事物的多种状态中选一个作为原点参考系。虽然可以表示层级而且层级可以跳转，但扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
