--- a/Self-GrowthKSM/孵化器/010元素.md
+++ b/Self-GrowthKSM/孵化器/010元素.md
@@ -6,9 +6,11 @@
 > 
 > 我希望它是一个不依赖任何软件，自成长且不断完善的笔记系统。我希望使用数学集合的思维与运算方法。
 >
-> 语义框架
+> 语义框架、构建方式，自顶向下（拿来主义，大树底下好乘凉）和自底向上（聚沙成塔）
 >
 > 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
+>
+> 我希望可以具有 强关系 和 弱关系 两种类型。
 
 - 通过语义空间，我大概可以实现网状结构和树状结构。
 - 通过语义空间，我可以使用搜索功能检索到任何类别的元素，包括访问权限、深度Depth=1的检索等等。
@@ -19,8 +21,6 @@
 
 通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
 
-
-为了方便理解，大致可以用空间思维概括：~~其中多态第一维，继承第二维，复杂度第三维，实例第四维。~~
 
 - 深度和广度：继承，  `this super [...] has [...]`
 - 组合、抽象，`this complex [...]`
