--- a/Self-GrowthKSM/孵化器/024关系-多态.md
+++ b/Self-GrowthKSM/孵化器/024关系-多态.md
@@ -7,22 +7,13 @@ keys:标签。
 
 **重新定义多态，多态到底是什么？**
 
-言外之意？阳的对立统一的阴？元素的元素？元素的类元信息？
+不同的A？引入“未出现生殖隔离”，就差异很小或没有差异但有不同的使用方法或者不同的B。这就意味着对于不足以分类的元素给与多态定义。
 
-多态可以实现重定向。
-
-层次≠多态，判别式：
-
-层级 不等于 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
-
-
-多态、换算、言外之意、注释、多态可以实现重定向、元素的元素？、元素的类似元信息？
+层级 ≠ 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
 
 
 ○ 形象|元素
 
-
-**多态不太好用。**，多态是从一件事物的多种状态中选一个作为原点参考系。虽然可以表示层级而且层级可以跳转，但扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
 
 ----
 
