--- a/Self-GrowthKSM/孵化器/010元素.md
+++ b/Self-GrowthKSM/孵化器/010元素.md
@@ -11,6 +11,8 @@
 > 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
 >
 > 我希望可以具有 强关系 和 弱关系 两种类型。
+>
+> 元素的多样性和关系的多样性。
 
 - 通过语义空间，我大概可以实现网状结构和树状结构。
 - 通过语义空间，我可以使用搜索功能检索到任何类别的元素，包括访问权限、深度Depth=1的检索等等。
@@ -75,6 +77,12 @@
 多继承（Multiple inheritance），即一个子类可以有多个父类，它继承了多个父类的特性。多继承可以看作是单继承的扩展。所谓多继承是指派生类具有多个基类，派生类与每个基类之间的关系仍可看作是一个单继承。（也就说番茄既属于水果也属于蔬菜）
 
 对于程序设计来说：菱形继承，它会造成数据冗余和二义性的问题。水果，香蕉，橘子，水果沙拉。
+
+“菱形”问题——路径二义性
+
+>> 单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
+
+先自立，在多样。
 
 
 ## 元素视图 (视图)
