--- a/Self-GrowthKSM/孵化器/010点-元素.md
+++ b/Self-GrowthKSM/孵化器/010点-元素.md
@@ -114,6 +114,31 @@
 
 tips：为数据与算法命名，tiddlywiki笔记
 
+### 命名-意识到的发现
+
+无形的事情，当我们意思到并用语言概括后事情就变得简单了。参考学会提问，提问是解决问题的开始
+
+假想一切都按照自应答做事情，比如，那我们大概会失去很多自由，增加很多烦恼。可以说太过自我。只有自己为中心？（算了，这个描述不太对）
+
+语言与世界，我与世界，无限与有效概括或指代
+
+有工具和没有工具的区别
+
+就像甄嬛传，无形的道德约束一样，突然发现，哦原来我可以不必这样做。
+
+意识到神创人不存在，发现最基本粒子夸克和轻子。
+
+命名（学习观）
+
+
+在意识层面想到，
+
+意识到是指觉察到，感觉到
+
+用语言助记描述意思到的感觉或现象。
+
+意思到意味着，我们也许试图突破自己的认知是知识边界
+
 ## 定义权限
 
 > 清晰的使用关键字定义权限使查找和重用更有效率。不会存在歧义。
