use def:: repleace def:

--- a/Self-GrowthKSM/孵化器/010点-元素.md
+++ b/Self-GrowthKSM/孵化器/010点-元素.md
@@ -35,7 +35,7 @@
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`def:<权限> <修饰符>this as [...] <super/complex> [...] has [...] throw [Super, ?sub]`
+`def::<权限> <修饰符>this as [...] <super/complex> [...] has [...] throw [Super, ?sub]`
 
 由广度、深度、复杂度与实现等四个变量构成的类四维空间
 
