--- a/Self-GrowthKSM/孵化器/022边-抽象.md
+++ b/Self-GrowthKSM/孵化器/022边-抽象.md
@@ -1,5 +1,5 @@
 
 ```java
-def:pub this abstract [[元素B]]，[[元素C]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [Super向上回溯(限定范围)/Any子元素(具体处理)]
+def::pub this abstract [[元素B]]，[[元素C]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [Super向上回溯(限定范围)/Any子元素(具体处理)]
 ```
 
