--- a/Self-GrowthKSM/孵化器/024边-多态.md
+++ b/Self-GrowthKSM/孵化器/024边-多态.md
@@ -1,7 +1,7 @@
 ## 多态（层次≠多态）
 
 ```java
-def:pub ?this or [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def::pub ?this or [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
 ```
 
 **重新定义多态，多态到底是什么？**
@@ -20,10 +20,10 @@ def:pub ?this or [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cit
 而且可以筛选到所有特征元素。以及参考与特征元素的元素？感觉仅筛选出特征元素就可以了。
 
 标注当前元素为特征元素并列出其它参考元素：
-`def:pub ?this or [...]`
+`def::pub ?this or [...]`
 
 标注当前元素参考与特征元素，设为基本元素。
-`def:pub this as [特征元素]`
+`def::pub this as [特征元素]`
 
 > 标题：冰（元素?多态）
 
