2023-7-27，增加点与重要性定义

--- a/Self-GrowthKSM/孵化器/011点-多态.md
+++ b/Self-GrowthKSM/孵化器/011点-多态.md
@@ -1,7 +1,7 @@
 ## 多态（层次≠多态）
 
 ```java
-def::pub ?this or [[特征元素]] super [[基本]]，[[Other]] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def::pub <?>this p=<D> or [[特征元素]]
 ```
 
 **重新定义多态，多态到底是什么？**
