--- a/Self-GrowthKSM/孵化器/012点-实例.md
+++ b/Self-GrowthKSM/孵化器/012点-实例.md
@@ -2,7 +2,7 @@
 ## 实例
 
 ```java
-def::pub @this super [[基本]]，[[Other]] has [B, C, D] throw [父元素/子元素]
+def::pub <@>this p=<D>
 ```
 
 ### 标题：水的升华（元素@实例）
