--- a/Self-GrowthKSM/孵化器/023边-组合.md
+++ b/Self-GrowthKSM/孵化器/023边-组合.md
@@ -1,7 +1,7 @@
 ## 组合（具象）
 
 ```java
-def::pub this complex [任意元素1，任意元素2] has [B, C, D] cite [[元素]] throw [父元素/子元素]
+def::pub <T>this p=<D> complex [任意元素1，任意元素2]
 ```
 
 > 标题：碳水化合物（元素&组合）
