--- a/Self-GrowthKSM/孵化器/021边-继承.md
+++ b/Self-GrowthKSM/孵化器/021边-继承.md
@@ -1,12 +1,9 @@
 # 基本
----
-aliases: [AI, Artificial Intelligence]
----
 
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```java
-def::pub <T>this p=<D, D1> super [[基本]]，[[Other]] has [B, C, D]
+def::pub <T>this p=[D, R] super [[基本]]，[[Other]] has [B, C, D]
 ```
 
 
