--- a/Self-GrowthKSM/孵化器/026边-引用.md
+++ b/Self-GrowthKSM/孵化器/026边-引用.md
@@ -1,4 +1,4 @@
 
 ```java
-def::pub <T>this p=<D> super [[...]] has [[...]] cite [[元素]]
+def::pub <T>this p=[D, R] super [[...]] has [[...]] cite [[元素]]
 ```
