--- a/Self-GrowthKSM/孵化器/030表达式.md
+++ b/Self-GrowthKSM/孵化器/030表达式.md
@@ -11,7 +11,7 @@
 - 公式：B ⊂ A = this->{B} super A
 - 解释，元素B包含于元素A 等价于 元素B的父类是元素A。
 
-- 公式：存在 this->{B，C} super A = ?this->{B} as B super A OR ?this->{C} as B super A
+- 公式：存在 this->{B，C} super A = ?this->{B} as B super A OR <?>this->{C} as B super A
 - 解释，B和C的父类是A，等价于 B 和 C 是同一族，同一广度。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
 
 - 公式：this->{C} super A、B  ≠  this->{D} complex A、B
@@ -20,19 +20,19 @@
 - 公式：pub this super =this （解决什么都重要的问题）
 - 解释：表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
 
-- 公式：pub @this complex [...]  ≠ pub @this super [...]
+- 公式：pub <@>this complex [...]  ≠ pub <@>this super [...]
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
-- 公式：pub ?this as [....] complex [...] 表示元素组合后产生的多态。
+- 公式：pub <?>this as [....] complex [...] 表示元素组合后产生的多态。
 
-- 公式：pub @this super [...]
+- 公式：pub <@>this super [...]
 
 - 公式：pub this abstract [...]
 
-- 公式：pub ?this as [....] super [...]
+- 公式：pub <?>this as [....] super [...]
 
 
-- 公式：pub ?this complex [...]
+- 公式：pub <?>this complex [...]
 - 解释：元素组合后产生的元素被标记为[[特征元素]]。
 
 - 公式：pub this complex [...] super [[A]]
