--- a/Self-GrowthKSM/孵化器/011点-多态.md
+++ b/Self-GrowthKSM/孵化器/011点-多态.md
@@ -1,18 +1,27 @@
 ## 多态（层次≠多态）
 
+多态性没办法直接实现，只能分开具体实现了。
+
+笔记其实只是类型或数据，方法是由我操作的。但多态应该是有自己的方法的吧。
+
+实际上，泛型就是一种多态。一个函数，可以代替几十个，甚至数百个函数，是一件多么让人兴奋的事情。
+
+事物本身不变，但形式表现的多样性。对于同一个事物的不同表述。一个通用的可容纳多样性变量的泛型函数动作。具体类型与泛型。
+
+虽然可以考虑抽象同一，但也要考虑具体不同于多样性。
+
+限定类别下，具有典型或代表性的元素。
+
+Wikipedia的重定向。
+
 ```java
 def::pub <?>this p=[D, R] or [[特征元素]]
 ```
 
 **重新定义多态，多态到底是什么？**
 
-不同的A？引入“未出现生殖隔离”，就差异很小或没有差异但有不同的使用方法或者不同的B。这就意味着对于不足以分类的元素给与多态定义。
-
-层级 ≠ 多态。筛选同一层级的元素 this super XXX。这个问题有个问题就是父元素节点不存在如何？
-
 
 ○ 形象|元素
-
 
 ----
 
@@ -40,7 +49,3 @@ def::pub <?>this p=[D, R] or [[特征元素]]
 化学分子式中：
 - 同素异形体：是相同元素组成,不同形态的单质.如碳元素就有金钢石、石墨、无定形碳等同素异形体.同素异形体由于结构不同,彼此间物理性质有差异
 - 同分异构体：在有机化学中，将分子式相同、结构不同的化合物互称同分异构体，也称为结构异构体。将具有相同分子式而具有不同结构的现象称为同分异构现象。
-
-
-> 函数文本
-> 最小可复用文本句段是函数文本，类似tw条目。
