--- a/Self-GrowthKSM/施工中.md
+++ b/Self-GrowthKSM/施工中.md
@@ -9,28 +9,24 @@ ok，我希望去定义此项目的目标和初心。-> 元素的建构.md
 ok，对于文件名与一级标题的关系，我该如何处理？（我们可以将xx作为文件名。元素@xx写进文件内容作为继承树。这样文件名就更加自由，不过需要替换的是查找方便的功能。）也许此文件中所有标题都包含此文件名作为主旨的论述。
 ok, 引用关系：程序设计中通常会导入外部程序库来实现某些功能。关键词：cite
 要注意的是，是否与其它概念冲突或有交集。
+ok，我还需要一些东西来标注它在当前的重要性优先级。如何选出比较重要的一组元素？如何定义根元素（root element）。
+ok，有些元素，不需要结构化，只需要有关联，或者相似性即可。
 ```
-
-对元素（点）的定义、对边的定义。
-
-keys:标签。相似（线索：近义词、同义词、反义词等等），关键词这种总结内容性的可以暂时不用作为字段，写的时候可以使用。
 
 ### TODO 待办
 
 主旨：自由与简洁。
 
+对元素（点）的定义、对边的定义。
+
 1. 元素的名称：线索：近义词、同义词、反义词等等，等效词汇
-2. 元素的特性（Trait）：我还需要一些东西来标注它在当前的重要性或者其他特性。如何选出比较重要的一组元素？如何定义根元素（root element）。
-3. 关于元素内块级内容（条目）的鱼骨解构法（结构主义法）
-   1. Q：重用文本函数|条目（对于文件内容下，或许一条佳句就是一个条目。）（我该如何处理像名言一样的一个句子然后聚合成的文件，并且重复利用这些句子（条目）呢？），这种重用应该是泛复用。A：Q：章、节、段 、句（函数文本）：最小可复用文本句段是函数文本，类似tw条目。
-4. 有些元素，不需要结构化，只需要有关联，或者相似性即可。
+   1. keys:标签。相似（线索：近义词、同义词、反义词等等），关键词这种总结内容性的可以暂时不用作为字段，写的时候可以使用。
+2. 关于元素内块级内容（条目）的鱼骨解构法（结构主义法）
 
 
 主体面向客体
 
 我希望对文件内容进行限定，关于相似的元素类别是否应该写进文件中，还是独立与文件？感觉可以像SuperMemo的wiki一样，一个文件只做一件事，限定一类内容或者说明一个主题，（怎么限定看作者，正如封装一样），差异太大可以创建新的文件
-
-很容易看名字归类从属对象。
 
 ### 提示与原则
 
@@ -47,7 +43,6 @@ keys:标签。相似（线索：近义词、同义词、反义词等等），关
 功能全面的算法比简单的算法更容易产生bug，更难实现。尽量使用简单的算法和数据结构。
 
 数据决定一切。如果选择的数据结构能很好的管理数据，算法部分往往不言自明。记住，数据结构，而非算法，才是编程的关键。
-
 
 
 > 进行词语和成语的学习。以便更好的掌握这些已有的元素与方法。
