更新多态定义
更新多态定义

Update 011点-多态.md

。

rename GrowthKSL

2023-7-31

update

update

--- a/GrowthKSM/孵化器/010点-元素.md
+++ b/GrowthKSM/孵化器/010点-元素.md
@@ -55,16 +55,15 @@ aliases: [AI, Artificial Intelligence]
 1. `?`：多态。`or`,问号，相同层次元素、同族元素。
 2. `@`：实例。`at`,指向实例对象；
 
-### 定义关键字
+### 点-关键字
 
-1. `keys` 代指定义关键词。
-2. `def` 代指定义语义空间。
-3. `<pub><mut>`，权限：公开、可选。
-4. `this` 代指当前文件(元素)
-5. `throw` 代指父元素限定范围，子元素实际处理。
+1. `def` 代指定义语义空间。
+2. `<pub><mut>`，权限：公开、可选。
+3. `this` 代指当前文件(元素)
+4. `keys` 代指定义关键词。
 
 
-### 关系关键字
+### 边-关键字
 
 1. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
 2. `or` 代指特征元素的参考特征元素列表。
@@ -73,6 +72,7 @@ aliases: [AI, Artificial Intelligence]
 5. `has` 代指当前类含有子类列表
 6. `complex` 代指组合、复杂度，组合多个元素形成新的元素。
 7. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
+8. `throw` 代指父元素限定范围，子元素实际处理。
 
 
 
@@ -87,6 +87,22 @@ aliases: [AI, Artificial Intelligence]
 >> 单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
 
 先自立，在多样。
+
+
+## 多态
+
+> 类型+行为，多态性没办法直接实现。点表示数据与类型，边表示动作与联系。这里不需要有方法或函数。知识结构的行为本质上是对某个元素进行操作然后产生新的元素。定义类型（点：元素等等）、定义行为（边：继承、抽象等等）。
+
+特征：不同类型（点）的相同行为（各种边的定义）；泛型：类型（点）各异但泛化为一个的类型（点），即类型的类型容器。是广义的代表某种类型。在输入数据时被确认。
+
+泛型也可以作为一种参数用在边动作中。或者任意需要它的地方。作为()内的多类型参数容器使用。
+
+
+## 映射 fx
+
+映射是集合与集合之间的一种对应关系，数集到数集的映射即为函数。
+
+一对一映射，多对一映射，一对多映射，映射（单射、满射、双射）
 
 
 ## 元素视图 (视图)
@@ -152,6 +168,10 @@ tips：为数据与算法命名，tiddlywiki笔记
 
 
 ## 等价、换算、叠加、减去。
+
+错误判断 + （来源）自己形成的重大误解错误判断 = 重大误解；
+
+错误判断 + （来源）对方欺诈行为 = 欺诈。
 
 ## 知识地图
 
