--- a/GrowthKSM/孵化器/012点-实例.md
+++ b/GrowthKSM/孵化器/012点-实例.md
@@ -1,10 +1,10 @@
 
 ## 实例
 
-```java
-def::pub <@>this p=[D, R]
+```rs
+def::pub <T:@>this p=[D, R]
 ```
 
-### 标题：水的升华（元素@实例）
+### 标题：水的升华（元素-实例）
 
 > 实例需要引用cite [[元素]]嘛？或许不需要把，因为程序在正常运行期已经包含所有依赖项。所以不需要cite。cite仅在多态、基本、组合中使用。
