--- a/GrowthKSM/孵化器/021边-继承.md
+++ b/GrowthKSM/孵化器/021边-继承.md
@@ -2,9 +2,10 @@
 
 ## 标题：水（元素 - 基本、继承体现层次）
 
-```java
-def::pub <T>this p=[D, R] super [[基本]]，[[Other]] has [B, C, D]
+```rs
+def::pub <T, U>this p=[D, R] super [E] has [B, C, D]
 ```
 
+has有生长和包含两种方向的意思。
 
 扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
