--- a/GrowthKSM/孵化器/026边-引用.md
+++ b/GrowthKSM/孵化器/026边-引用.md
@@ -1,6 +1,8 @@
 
-```java
-def::pub <T>this p=[D, R] super [[...]] has [[...]] cite [[元素]]
+# 引用
+
+```rs
+def::pub <T, U>this p=[D, R] super [E] has [[...]] cite [[元素]]
 ```
 
 关于元素中部分概念的引用，采用：`cite A#[[E]]`
