--- a/GrowthKSM/施工中.md
+++ b/GrowthKSM/施工中.md
@@ -15,7 +15,18 @@ ok，有些元素，不需要结构化，只需要有关联，或者相似性即
 
 ### TODO 待办
 
+
+<!-- 总的来说，是对页面在点集中相对位置类型和关系的描述，适当弃用关系对的描述，选择通过反链查看关联-->
+
+输入和输出两者不可缺其一
+
+我需要一个贯穿全文的线索系统，比如继承树。
+
+需要一个标签树，标签系统。tips:用标签来作为虚拟文件夹，这样的话，你打两个标签，就归属到了这两个类别了。
+
 主旨：自由与简洁。
+
+筛选器：GitHub的筛选器就蛮有意思的。
 
 对元素（点）的定义、对边的定义。
 
@@ -23,6 +34,7 @@ ok，有些元素，不需要结构化，只需要有关联，或者相似性即
    1. keys:标签。相似（线索：近义词、同义词、反义词等等），关键词这种总结内容性的可以暂时不用作为字段，写的时候可以使用。
 2. 关于元素内块级内容（条目）的鱼骨解构法（结构主义法）
 
+附加信息：言外之意、注释、元素的类似元信息、阳的对立统一的阴？
 
 主体面向客体
 
