--- a/GrowthKSM/孵化器/027边-约束.md
+++ b/GrowthKSM/孵化器/027边-约束.md
@@ -1,4 +1,6 @@
+# 约束
 
-```java
-def::pub <T>this p=[D, R] throw [Super向上回溯(限定范围)/Any子元素(具体处理)]
+
+```rs
+def::pub <T, U>this p=[D, R] throw [Super向上回溯(限定范围)/Any子元素(具体处理)]
 ```
