--- a/GrowthKSM/施工中.md
+++ b/GrowthKSM/施工中.md
@@ -16,6 +16,10 @@ ok，有些元素，不需要结构化，只需要有关联，或者相似性即
 ### TODO 待办
 
 
+一个事物的确有多个类别、多方面的解释，比如某个词汇的多学科概念内涵。如何在一剧描述中涵盖这些东西？
+
+多学科的东西也可以演变为跨学科领域（仅对事实存在的正式的交叉学科有效）
+
 <!-- 总的来说，是对页面在点集中相对位置类型和关系的描述，适当弃用关系对的描述，选择通过反链查看关联-->
 
 输入和输出两者不可缺其一
