--- a/GrowthKSM/施工中.md
+++ b/GrowthKSM/施工中.md
@@ -17,7 +17,7 @@ ok，多隶属的关系 归于unto解决。
 ### TODO 待办
 
 我突然想到关于关键词的总结摘要是否需要的问题，keys
-我确实需要一类边表明它自己的身份多词汇的描述，先把词汇当成语言符号，然后在放到具体语境中。另外多学科使用同一词汇，但文件名只能有一个该如何处理？
+term 和word 同一个词有不同的解释。属于我确实需要一类边表明它自己的身份多词汇的描述，先把词汇当成语言符号，然后在放到具体语境中。另外多学科使用同一词汇，但文件名只能有一个该如何处理？
 
 一个事物的确有多个类别、多方面的解释，比如某个词汇的多学科概念内涵。如何在一剧描述中涵盖这些东西？
 
