--- a/GrowthKSM/孵化器/030点-术语.md
+++ b/GrowthKSM/孵化器/030点-术语.md
@@ -4,6 +4,10 @@
 def::pub <T, U>this p=[D, R] term [...]
 ```
 
+术语使得概念变得简单而不混淆，通用
+
+如果对某个词赋予太多意义就很容易使沟通变得困难且难以理解
+
 def::pub <T:?>this(一词) p=[D, R] T:{[多义]}
 
 term 和word 同一个词有不同的解释。属于我确实需要一类边表明它自己的身份多词汇的描述，先把词汇当成语言符号，然后在放到具体语境中。另外多学科使用同一词汇，但文件名只能有一个该如何处理？
