--- a/GrowthKSM/施工中.md
+++ b/GrowthKSM/施工中.md
@@ -44,6 +44,10 @@ ok，多隶属的关系 归于unto解决。
 
 我希望对文件内容进行限定，关于相似的元素类别是否应该写进文件中，还是独立与文件？感觉可以像SuperMemo的wiki一样，一个文件只做一件事，限定一类内容或者说明一个主题，（怎么限定看作者，正如封装一样），差异太大可以创建新的文件
 
+典型：形容一个事物具有代表性
+
+特征：作为一事物异于他事物的特点的。
+
 ### 提示与原则
 
 > 我们始终践行的实用主义是，简单和优雅。（简单意味着更快更好。）
