--- a/GrowthKSM/施工中.md
+++ b/GrowthKSM/施工中.md
@@ -16,6 +16,8 @@ ok，多隶属的关系 归于unto解决。
 
 ### TODO 待办
 
+> 只有阅读和学习新材料才可以做到不断优化现有结构
+
 光锥，事件视界
 
 是否需要用关键词总结概况？，keys
@@ -49,6 +51,27 @@ ok，多隶属的关系 归于unto解决。
 典型：形容一个事物具有代表性
 
 特征：作为一事物异于他事物的特点的。
+
+条件、路径、断点知识、适用性。（编程模块化）。你的所有经验或者你所运行的你的所思，其适用性有其范围。
+
+解构，创生（具象，简化），生长 
+
+视图显示方式
+
+【数学向】以文字为工具，将思维与认知投射到纸上，开始运算。语言是我们唯一可以用于精神思维计算的工具，道德经名为观眇，我们所掌握的所有语言（象，去象为实），数学，英语，国语构成了我们系统下的应用软件，身体构成了我们的硬件，（认知科学），在硬件与应用软件之间，便是我们的“操作系统”。在硬件与应用软件之间，便是我们的“操作系统”。
+
+
+语言，意识到，语义运算。生活中的东西，有时候属于灯下黑，就像众里寻他千百度的感觉 
+
+文内上下文指代如何实现？（语言的使用方式）
+
+推导过程和结果一样重要！
+
+多样的笔记软件都不如好用的笔记框架 ，试了很多笔记软件，还是笔记框架来的实在。
+
+知识命名统一标准化，让同一个东西用通用词汇表达。即专业名词。
+
+视角背景，从数学作为根基到易经到日常生活与自我觉察与感受获得暂时不可说的经验到道德经与庄子到有利器不无用而无可为。还有计算机编程使用入门基础。
 
 ### 提示与原则
 
