--- a/GrowthKSM/孵化器/021边-继承.md
+++ b/GrowthKSM/孵化器/021边-继承.md
@@ -3,9 +3,9 @@
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```rs
-def::pub <T, U>this p=[D, R] super [E] has [B, C, D]
+def::pub type:T,U this *i p=[D, R] super [E] has [B, C, D]
 ```
 
-has有生长和包含两种方向的意思。
+has有生长和包含两种方向的意思。super has，has单独表示？
 
 扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
