--- a/GrowthKSM/孵化器/024边-组合.md
+++ b/GrowthKSM/孵化器/024边-组合.md
@@ -1,7 +1,7 @@
 ## 组合（具象）
 
 ```rs
-def::pub <T, U>this p=[D, R] complex [任意元素1，任意元素2]
+def::pub type:T,U this *i p=[D, R] complex [任意元素1，任意元素2]
 ```
 
 > 标题：碳水化合物（元素&组合）
