--- a/GrowthKSM/孵化器/011点-泛型.md
+++ b/GrowthKSM/孵化器/011点-泛型.md
@@ -2,15 +2,17 @@
 
 泛型：点的点类型容器。这个点本质和别的点一样，事物本身不变，但形式表现的多样性。从属映射的一对多或多对一关系。限定类别下，具有典型或代表性的元素。
 
+点，变量。
+
 ```rs
-def::pub <T:?>this p=[D, R] T:{[...]}
+def::pub type:? this p=[D, R] ?:{[...]}
 ```
 
 ```rs
-def::pub <T:?>this(一义) p=[D, R] T:{[多词]}
-def::pub <T:?>this(准确用词) p=[D, R] T:{[重定向]}
-def::pub <T:?>this(水) p=[D, R] T:{[各种温度下的水态]}
-def::pub <T:?>this(同一物质) p=[D, R] T:{[不同环境下的形态结构功能]}
+def::pub type:? this(一义) p=[D, R] ?:{[多词]}
+def::pub type:? this(准确用词) p=[D, R] ?:{[重定向]}
+def::pub type:? this(水) p=[D, R] ?:{[各种温度下的水态]}
+def::pub type:? this(同一物质) p=[D, R] ?:{[不同环境下的形态结构功能]}
 ```
 
 达成目的不同路径？一个通用的可容纳多样性变量的泛型函数动作。虽然可以考虑抽象同一，但也要考虑具体不同于多样性。
