--- a/GrowthKSM/孵化器/026边-引用.md
+++ b/GrowthKSM/孵化器/026边-引用.md
@@ -2,10 +2,10 @@
 # 引用
 
 ```rs
-def::pub <T, U>this p=[D, R] super [E] has [[...]] cite [[元素]]
+def::pub type:T,U this *i p=[D, R] super [E] has [[...]] cite [[元素]]
 ```
 
-关于元素中部分概念的引用，采用：`cite A#[[E]]`
+关于元素中部分概念的引用，采用：`cite [[E]].A`
 
 Q：重用文本函数|条目（对于文件内容下，或许一条佳句就是一个条目。）（我该如何处理像名言一样的一个句子然后聚合成的文件，并且重复利用这些句子（条目）呢？），这种重用应该是泛复用。
 
