--- a/GrowthKSM/孵化器/027边-约束.md
+++ b/GrowthKSM/孵化器/027边-约束.md
@@ -2,5 +2,5 @@
 
 
 ```rs
-def::pub <T, U>this p=[D, R] throw [Super向上回溯(限定范围)/Any子元素(具体处理)]
+def::pub type:T,U this *i p=[D, R] throw [Super向上回溯(限定范围)/Any子元素(具体处理)]
 ```
