--- a/GrowthKSM/孵化器/021边-继承.md
+++ b/GrowthKSM/孵化器/021边-继承.md
@@ -6,8 +6,6 @@
 def::pub type:T,U this *i p=[D, R] super [E] has [B, C, D]
 ```
 
-has有生长和包含两种方向的意思。super has，has单独表示？发展（衍生，生长路径）应该单独表示？TODO：生长路径，两个相互独立，但有明显先后关系的元素。
-
-super必须有，has可选。
+has仅有包含的意思。super必须有，has可选。
 
 扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
