--- a/GrowthKSM/示例/哲学.md
+++ b/GrowthKSM/示例/哲学.md
@@ -1,4 +1,14 @@
 
-def::pub ?this
+def::pub this
 
 # 哲学
+
+> 可信者不可爱，可爱者不可信，如此罢了。中哲有趣，西哲作者心境多坎坷？需要强大的内心阅读，否则很会掉血，对于某些知识，学之前不知道是正确的，学之后还是不知道是不是正确的，那如何验证对不对呢？老庄的学说很回血，哲学是无用之用，是教人如何成为圣人。
+
+## 一般定义
+
+哲学是对基本和普遍之问题进行研究的学科，一般具有严密逻辑系统的宇宙观，研究宇宙的性质、人在宇宙中的位置等等一些基本问题。
+
+哲学（Φιλοσοφία）按其希腊语词源是“追寻智慧”的意思。中文里，“哲”起源很早，其历史久远。如“孔门十哲”，“古圣先哲”等词，“哲”或“哲人”，专指那些善于思辨，学问精深者，即西方近似“哲学家”，“思想家”之谓。一般认为中国哲学起源东周时期，以孔子的儒家、老子的道家、墨子的墨家及晚期的法家为代表。而实际上在之前的《易经》当中，已经开始讨论哲学问题。
+
+北宋中叶以后，道学家的声势愈来愈浩大；南宋前期虽然政府几次三番下令禁止，并不能阻挡道学的流行和减削它的声望。南宋以后，只有朱陆二系传续不绝。元明之际，朱学进居正统之位，为中国君主社会后期的官方思想。惠栋在评《毛诗注疏》时说：“宋儒之祸，甚于秦灰。”人类对事物的认识有一个过程，这个过程总是：从感知具体到理知抽象、再合而理知抽象性的具体。“理知抽象性的具体”就是通常所说的“智慧”或“哲知”。进一步地各种哲知形成了理论系统就产生了“哲学”或称“智慧之学”。用范畴式表达这一过程就是：哲知{感知/理知}，体系{个体/关系}；哲学{哲知/体系}。
