--- a/GrowthKSM/孵化器/010点-元素.md
+++ b/GrowthKSM/孵化器/010点-元素.md
@@ -169,6 +169,10 @@ tips：为数据与算法命名，tiddlywiki笔记
 
 ## 等价、换算、叠加、减去。
 
+add 、minus、times、divide
+
+A M T D
+
 错误判断 + （来源）自己形成的重大误解错误判断 = 重大误解；
 
 错误判断 + （来源）对方欺诈行为 = 欺诈。
