--- a/GrowthKSM/孵化器/021边-继承.md
+++ b/GrowthKSM/孵化器/021边-继承.md
@@ -3,7 +3,7 @@
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```rs
-def::pub type:T,U this *i p=[D, R] super [E] has [B, C, D]
+def::pub type:T,U this Ti p=[D, R] super [E] has [B, C, D]
 ```
 
 has仅有包含的意思。super必须有，has可选。
