--- a/GrowthKSM/孵化器/026边-引用.md
+++ b/GrowthKSM/孵化器/026边-引用.md
@@ -2,7 +2,7 @@
 # 引用
 
 ```rs
-def::pub type:T,U this *i p=[D, R] super [E] has [[...]] cite [[元素]]
+def::pub type:T,U this Ti p=[D, R] super [E] has [[...]] cite [[元素]]
 ```
 
 关于元素中部分概念的引用，采用：`cite [[E]].A`
