--- a/GrowthKSM/孵化器/030边-术语.md
+++ b/GrowthKSM/孵化器/030边-术语.md
@@ -1,7 +1,7 @@
 # 术语
 
 ```rs
-def::pub type:T,U this *i p=[D, R] term [...]
+def::pub type:T,U this Ti p=[D, R] term [...]
 ```
 
 术语使得概念变得简单而不混淆，通用
