--- a/GrowthKSM/孵化器/031边-路径.md
+++ b/GrowthKSM/孵化器/031边-路径.md
@@ -1,7 +1,7 @@
 # 生长路径
 
 ```rs
-def::pub type:T,U this *i p=[D, R] route>>P [...]
+def::pub type:T,U this Ti p=[D, R] route>>P [...]
 ```
 
 链表式结构，当前标注下一个元素。
