--- a/GrowthKSM/示例/数学.md
+++ b/GrowthKSM/示例/数学.md
@@ -8,3 +8,17 @@ def::pub this super [[形式科学]]
 基础数学的知识与运用是生活中不可或缺的一环。对数学基本概念的完善，早在古埃及、美索不达米亚及古印度历史上的古代数学文本便可观见，而在古希腊那里有更为严谨的处理。从那时开始，数学的发展便持续不断地小幅进展，至16世纪的文艺复兴时期，因为新的科学发现和数学革新两者的交互，致使数学的加速发展，直至今日。数学并成为许多国家及地区的教育中的一部分。
 
 数学在许多领域都有应用，包括科学、工程、医学、经济学和金融学等。数学对这些领域的应用通常被称为应用数学，有时亦会激起新的数学发现，并导致全新学科的发展，例如物理学的实质性发展中建立的某些理论激发数学家对于某些问题的不同角度的思考。数学家也研究纯粹数学，就是数学本身的实质性内容，而不以任何实际应用为目标。许多研究虽然以纯粹数学开始，但其过程中也发现许多可用之处。
+
+## 数学名词
+
+定义
+公理
+定理  相当复杂的推理（推理，基本作用）
+推论  
+引理  中间产物 相当复杂
+猜想  证明证伪 不可被证
+命题 
+悖论  
+
+
+在数学中，"性质"通常指的是一个数学对象或者一种数学结构所具有的特征或者属性。例如，一个函数的性质可能包括它的奇偶性、单调性、最大值和最小值等等。而"定理"则是对某一类数学对象或者数学结构所具有的性质进行严格的证明和描述。换句话说，定理是通过严格的证明得出的结论，具有普遍的适用性和可靠性。性质和定理都是数学中重要的概念，它们帮助我们更好地理解和描述数学对象和结构。[思考]
