--- a/GrowthK2S/施工中.md
+++ b/GrowthK2S/施工中.md
@@ -23,6 +23,8 @@ TODO：重新整理点和边等等的概念定义。
 
 于敏，氢弹。他把很复杂的东西，善于归纳总结提炼，然后就逐渐形成一个明确的图像，他是很勤奋的。
 
+解决问题的其中一种方式，获取更多的知识，在更高维解决这个问题。（需要注意，是知识而非信息，可预测而非可重现）
+
 离散数学 图论
 
 离散数学图论 + 程序设计思想 + 中图法 杜伟十进制 + 笔记经验 + ……
