--- a/GrowthK2S/孵化器/021边-集合.md
+++ b/GrowthK2S/孵化器/021边-集合.md
@@ -3,9 +3,9 @@
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```rs
-def::pub type:T,U this Ti p=[D, R] super [E] has [B, C, D]
+def::pub type:T,U this Ti p=[D, R] \supset{[E]} \subset{[B, C, D]} 
 ```
 
-has仅有包含的意思。super必须有，has可选。
+subset可选，仅有包含的意思。supset必选。
 
 扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
