--- a/GrowthK2S/孵化器/029边-归于.md
+++ b/GrowthK2S/孵化器/029边-归于.md
@@ -5,3 +5,16 @@ def::pub type:T,U this Ti p=[D, R] unto [...]
 ```
 
 专门解决组合来源问题、多继承问题。
+
+
+## 多继承
+
+多继承（Multiple inheritance），即一个子类可以有多个父类，它继承了多个父类的特性。多继承可以看作是单继承的扩展。所谓多继承是指派生类具有多个基类，派生类与每个基类之间的关系仍可看作是一个单继承。（也就说番茄既属于水果也属于蔬菜）
+
+对于程序设计来说：菱形继承，它会造成数据冗余和二义性的问题。水果，香蕉，橘子，水果沙拉。
+
+“菱形”问题——路径二义性
+
+>> 单继承会比多继承更有优势，使用单继承时，多继承的特点可以由其他关系实现，比如多态。
+
+先自立，在多样。
