--- a/GrowthK2S/示例/概念渐构.md
+++ b/GrowthK2S/示例/概念渐构.md
@@ -21,10 +21,12 @@ def::pub type:List this p=[curr]
 - 柳叶刀
 - 遗忘是心静的风铃
 - 时间
-
 - 情绪语言
 - 数学语言
 - 英语语言
 - 文学语言
 - 逻辑语言
 - 哲学与心理学
+
+
+这些东西不是帮我去预测什么，而是指导我如何做。它是一些意象（来着古诗词）和工具的集合，旨在具有指导作用，而不是事后诸葛亮，有些是说明是什么，有些是说明如何做，有些是说明它怎么样，对它的评价如何
