--- a/GrowthK2S/孵化器/050表达式.md
+++ b/GrowthK2S/孵化器/050表达式.md
@@ -3,37 +3,37 @@
 ## 检索式
 
 - 描述：查找同层元素。
-- 公式：this super [[...]]
+- 公式：this supset [[...]]
 
 
 ## 推导式
 
-- 公式：B ⊂ A = this->{B} super A
+- 公式：B ⊂ A = this{B} supset A
 - 解释，元素B包含于元素A 等价于 元素B的父类是元素A。
 
-- 公式：存在 this->{B，C} super A = ?this->{B} as B super A OR <?>this->{C} as B super A
+- 公式：存在 this{B，C} supset A = ?this{B} as B supset A OR <?>this{C} as B supset A
 - 解释，B和C的父类是A，等价于 B 和 C 是同一族，同一广度。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
 
-- 公式：this->{C} super A、B  ≠  this->{D} complex A、B
-- 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即super ⊂ complex。
+- 公式：this{C} supset A、B  ≠  this{D} complex A、B
+- 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即supset ⊂ complex。
 
-- 公式：pub this super =this （解决什么都重要的问题）
-- 解释：表示此元素∈定义基本根元素列表，super =this，等号意思是赋值。
+- 公式：pub this supset =this （解决什么都重要的问题）
+- 解释：表示此元素∈定义基本根元素列表，supset =this，等号意思是赋值。
 
-- 公式：pub <@>this complex [...]  ≠ pub <@>this super [...]
+- 公式：pub <@>this complex [...]  ≠ pub <@>this supset [...]
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
 - 公式：pub <?>this as [....] complex [...] 表示元素组合后产生的多态。
 
-- 公式：pub <@>this super [...]
+- 公式：pub <@>this supset [...]
 
 - 公式：pub this abstract [...]
 
-- 公式：pub <?>this as [....] super [...]
+- 公式：pub <?>this as [....] supset [...]
 
 
 - 公式：pub <?>this complex [...]
 - 解释：元素组合后产生的元素被标记为[[特征元素]]。
 
-- 公式：pub this complex [...] super [[A]]
+- 公式：pub this complex [...] supset [[A]]
 - 解释：元素组合后产生的元素继承自元素A。
