--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -43,6 +43,7 @@ def::pub type:Create this p=[D, R]
 
 `def::<权限> <修饰符>this as [...] <super/complex> [...] has [...] throw [Super, ?sub]`
 
+将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
 
 ## 符号定义
