Everything is a set element

--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -13,7 +13,7 @@ def::pub type:Create this p=[D, R]
 - 希望元素的概念可以泛化与多样性。它是自由的且具有多样性的结构。
 - 希望它是一个不依赖任何软件，自成长且不断完善的笔记系统。我希望使用数学集合的思维与运算方法。
 - 语义框架、构建方式，自顶向下（拿来主义，大树底下好乘凉）和自底向上（聚沙成塔）
-- 语义模型是自生长知识结构模型的高阶应用，用法更为严格和丰富。
+- 语义模型是随着输入自主生长知识结构模型的高阶应用，用法更为严格和丰富。
 - 希望可以具有 强关系 和 弱关系 两种类型。
 - 元素的多样性和关系的多样性。
 
@@ -29,10 +29,10 @@ def::pub type:Create this p=[D, R]
 通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
 
 
-==集合的元素，元素的集合。==
+主旨：自由与简洁。
 
 
-- 深度和广度：继承，  `this super [...] has [...]`
+- 深度和广度：继承，  `this supset [...] subset [...]`
 - 组合、抽象，`this complex [...]`
 - 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
 
@@ -41,10 +41,15 @@ def::pub type:Create this p=[D, R]
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`def::<权限> <修饰符>this as [...] <super/complex> [...] has [...] throw [Super, ?sub]`
+`def::<权限> <修饰符>this as [...] <supset/complex> [...] subset [...] throw [supset, ?sub]`
 
 将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
+我希望更偏向数学化。
+
+==集合的元素，元素的集合。==
+
+边和点都是元素（变量），元素有自己也有向量对象（边）。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
 
 ## 符号定义
 
@@ -69,8 +74,8 @@ def::pub type:Create this p=[D, R]
 3. `supset` 代指超集。
 4. `subset` 代指子集。
 5. `complex` 代指组合、复杂度，组合多个元素形成新的元素。
-6. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的父类。
-7. `throw` 代指父元素限定范围，子元素实际处理。
+6. `abstract` 代指从多个元素中抽象出一个元素(this=当前元素)作为多个元素的超集。
+7. `throw` 代指超元素限定范围，子元素实际处理。
 
 
 ## 多态
