--- a/GrowthK2S/孵化器/010点-元素.md
+++ b/GrowthK2S/孵化器/010点-元素.md
@@ -3,6 +3,8 @@
 
 ## 元素视图 (视图)
 
+视图显示方式
+
 1. 类似CAD，3d软件的窗口视图与查看方式。
 2. 各种类型的结构，树状、网状等等。
 
@@ -23,6 +25,7 @@ A M T D
 
 错误判断 + （来源）对方欺诈行为 = 欺诈。
 
+推导过程和结果一样重要！
 
 
 ## 元素的命名(为知识F(x)命名)
@@ -41,6 +44,10 @@ A M T D
 tips：为数据与算法命名，tiddlywiki笔记
 
 ### 命名-意识到的发现
+
+
+语言，意识到，语义运算。生活中的东西，有时候属于灯下黑，就像众里寻他千百度的感觉 
+
 
 无形的事情，当我们意思到并用语言概括后事情就变得简单了。参考学会提问，提问是解决问题的开始
 
