--- a/GrowthK2S/孵化器/021边-集合.md
+++ b/GrowthK2S/孵化器/021边-集合.md
@@ -3,7 +3,7 @@
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```rs
-def::pub type:T,U this Ti p=[D, R] \supset{[E]} \subset{[B, C, D]} 
+def::pub type:T,U this Ti p=[D, R] supset [E] subset [B, C, D] 
 ```
 
 subset可选，仅有包含的意思。supset必选。
