--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -6,6 +6,7 @@ def::pub type:Create this p=[D, R]
 
 自然基础之上，通过人的创造实现。
 
+创造、环境、氛围、机会、蛰伏、善用余晖、物尽其用。
 
 # 元素
 
@@ -28,6 +29,7 @@ def::pub type:Create this p=[D, R]
 
 通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
 
+元素：不是边界，而是像细胞膜一样的张力弹性与柔韧。可以随意挤压变形，但是还是有一定的限度的。
 
 主旨：自由与简洁。
 
