--- a/GrowthK2S/思海/元素的渐构.md
+++ b/GrowthK2S/思海/元素的渐构.md
@@ -146,3 +146,10 @@ https://zhuanlan.zhihu.com/p/637921666
 	美国文学
 	中文
 	语言学
+
+
+# 【从感觉到描述，从意识到】
+
+无论如何，都会在整体性的粗略感觉，到多样性的诉说，再到主题的解答描述，最后相互关联成为知识网。（可能吧🙂）
+
+有一种可能是把事物切成自己看到的形状然后用语言描述出来
